<resources>
    <string name="app_name">WorkoutWarrior</string>

    <!-- Equipment Page -->
    <string name="EquipmentCapeText">Cape</string>
    <string name="EquipmentHeadText">Head</string>
    <string name="EquipmentAccessoryText">Accessory</string>
    <string name="EquipmentLeftHandText">Left Hand</string>
    <string name="EquipmentChestText">Chest</string>
    <string name="EquipmentRightHandText">Right hand</string>
    <string name="EquipmentLegsText">Legs</string>
    <string name="EquipmentFeetText">Feet</string>
    <string name="EquipmentStatsHeaderText">Equipment Stats</string>
    <string name="EquipmentStatsDummyText">Stat 0: -4; Stat 1: -4</string>
    <string name="title_activity_dexterity_workout">Map</string>
    <string name="remember_me">Remember Me</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="incorrect_login_information">Incorrect Login Information</string>
    <string name="profile">Profile</string>
    <string name="workouts">Workouts</string>
    <string name="logout">Logout</string>

</resources>