<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EquipmentFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/SelectEquipmentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:background="@color/dark_grey"
        android:padding="20dp"
        android:layout_margin="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/EquipmentCapeButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="@string/EquipmentCapeText"
            android:textSize="12sp"
            android:backgroundTint="@color/blue_grey"
            app:layout_constraintEnd_toStartOf="@id/EquipmentHeadButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/EquipmentHeadButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="@string/EquipmentHeadText"
            android:textSize="12sp"
            android:backgroundTint="@color/blue_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/EquipmentAccessoryButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="@string/EquipmentAccessoryText"
            android:textSize="10sp"
            android:backgroundTint="@color/blue_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/EquipmentHeadButton"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/EquipmentLeftHandButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="@string/EquipmentLeftHandText"
            android:textSize="12sp"
            android:backgroundTint="@color/blue_grey"
            app:layout_constraintStart_toStartOf="@id/EquipmentCapeButton"
            app:layout_constraintTop_toBottomOf="@id/EquipmentCapeButton" />

        <Button
            android:id="@+id/EquipmentChestButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="@string/EquipmentChestText"
            android:textSize="12sp"
            android:backgroundTint="@color/blue_grey"
            app:layout_constraintStart_toStartOf="@id/EquipmentHeadButton"
            app:layout_constraintTop_toBottomOf="@id/EquipmentHeadButton" />

        <Button
            android:id="@+id/EquipmentRightHandButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="@string/EquipmentRightHandText"
            android:textSize="12sp"
            android:backgroundTint="@color/blue_grey"
            app:layout_constraintStart_toStartOf="@id/EquipmentAccessoryButton"
            app:layout_constraintTop_toBottomOf="@id/EquipmentAccessoryButton" />

        <Button
            android:id="@+id/EquipmentLegsButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="@string/EquipmentLegsText"
            android:textSize="10sp"
            android:backgroundTint="@color/blue_grey"
            app:layout_constraintStart_toStartOf="@id/EquipmentChestButton"
            app:layout_constraintTop_toBottomOf="@id/EquipmentChestButton" />

        <Button
            android:id="@+id/EquipmentFeetButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="@string/EquipmentFeetText"
            android:textSize="12sp"
            android:backgroundTint="@color/blue_grey"
            app:layout_constraintStart_toStartOf="@id/EquipmentLegsButton"
            app:layout_constraintTop_toBottomOf="@id/EquipmentLegsButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/EquipmentDetailsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="10dp"
        android:background="@color/dark_blue_grey"
        android:layout_margin="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SelectEquipmentLayout">

        <TextView
            android:id="@+id/EquipmentStatsHeaderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/EquipmentStatsHeaderText"
            android:textSize="20sp"
            android:textColor="@color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/EquipmentStatsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/EquipmentStatsDummyText"
            android:textColor="@color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/EquipmentStatsHeaderText" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>